public enum CourseStatus {
    ACTIVE, INACTIVE
}
