import java.util.List;

public class GenericCsvExporter {

    // olhar aqui tbm
    public static String export(List<?> data, List<String> columns){
        return null;
    }
    
}
