package model;
public enum DifficultyLevel {
    BEGINNER, INTERMEDIATE, ADVANCED
}
